--- a/_output.yml
+++ b/_output.yml
@@ -2,6 +2,8 @@ bookdown::gitbook:
   css: style.css
   config:
     toc:
+      collapse: section
+      scroll_highlight: yes
       before: |
         <li><a href="./">Introduction to biostatistics and machine learning</a></li>
     download: ["pdf"]
